compiler-core/src/type_/snapshots/gleam_core__type___tests__pipe_with_annonymous_unannotated_functions_wrong_arity3.snap
---
source: compiler-core/src/type_/tests.rs
expression: "\npub fn main() {\n  let a = 1\n     |> fn (x) { #(x, x + 1) }\n     |> fn (x) { x.0 }\n     |> fn () { x }\n}\n"
---
----- SOURCE CODE

pub fn main() {
  let a = 1
     |> fn (x) { #(x, x + 1) }
     |> fn (x) { x.0 }
     |> fn () { x }
}


----- ERROR
error: Incorrect arity
  ┌─ /src/one/two.gleam:6:9
  │
6 │      |> fn () { x }
  │         ^^^^^^^^^^^ Expected no arguments, got 1


error: Unknown variable
  ┌─ /src/one/two.gleam:6:17
  │
6 │      |> fn () { x }
  │                 ^

The name `x` is not in scope here.
